# spaggiari-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bacheca.csv  phpsessid.txt
examples/: download_bytes.rs  usage.rs
src/: bacheca_personale.rs  error.rs  lib.rs  login.rs  main.rs
