[package]
name = "poc-spaggiari"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "rustls-tls"] }
scraper = "0.24.0"
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
csv = "1.3.1"
regex = "1.11.3"
