[package]
name = "spaggiari-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Una libreria Rust per interagire con il portale Spaggiari (Registro Elettronico)"
license = "MIT"
repository = "https://github.com/yourusername/spaggiari-rs"
keywords = ["spaggiari", "scuola", "registro-elettronico"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "spaggiari_rs"
path = "src/lib.rs"

[[bin]]
name = "spaggiari-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "rustls-tls"] }
scraper = "0.24.0"
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
csv = "1.3.1"
regex = "1.11.3"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
