[package]
name = "spaggiari-rs"
version = "0.1.3"
edition = "2021"
authors = ["Matteo Lazzarin <matteo.lazzarin@mtlz.it>"]
description = "Una libreria Rust per interagire con il portale Spaggiari (Registro Elettronico)"
license = "MIT"
repository = "https://github.com/IlTeo285/spaggiari-rs"
keywords = ["spaggiari", "scuola", "registro-elettronico"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "spaggiari_rs"
path = "src/lib.rs"

[[bin]]
name = "spaggiari-cli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "cookies", "rustls-tls"] }
scraper = "0.24.0"
url = "2.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
csv = "1.4.0"
regex = "1.12.2"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
